# filecipher

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: aes_gcm.rs  lib.rs  main.rs  memory_pool.rs
