[package]
name = "filecipher"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = { version = "0.5.2", features = ["alloc", "getrandom"], default-features = false }
aes = { version = "0.8.4"}
cipher = "0.4.4"
ctr = "0.9.2"
ghash = { version = "0.5.1", default-features = false }
log = { version = "0.4.21", optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }
rayon = { version = "1.10.0", optional = true }
rpassword = "7.3.1"
sha2 = "0.10.8"
subtle = { version = "2.5.0", default-features = false }

[features]
default = ["dev", "parallel"]
dev = ["log", "pretty_env_logger"]
parallel = ["rayon"]
